[gd_scene load_steps=8 format=3 uid="uid://dv4mw6mdkpqxp"]

[ext_resource type="Script" uid="uid://c70dbrqkk6u47" path="res://Blocks/Belt/belt.gd" id="1_6m2es"]
[ext_resource type="Shader" uid="uid://dgpvmu1fvx63o" path="res://Blocks/Belt/belt_move.gdshader" id="1_rfspg"]
[ext_resource type="Texture2D" uid="uid://b4veklkbcsiks" path="res://Blocks/Belt/belt_part_side.png" id="3_dy5sx"]
[ext_resource type="Texture2D" uid="uid://wxds8qpfcknd" path="res://Blocks/Belt/belt_part_full.png" id="3_smakq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dy5sx"]
resource_local_to_scene = true
shader = ExtResource("1_rfspg")
shader_parameter/flipped = false
shader_parameter/small = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xib2"]
resource_local_to_scene = true
shader = ExtResource("1_rfspg")
shader_parameter/flipped = false
shader_parameter/small = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rgkw3"]
resource_local_to_scene = true
shader = ExtResource("1_rfspg")
shader_parameter/flipped = false
shader_parameter/small = false

[node name="Belt" type="Node2D"]
script = ExtResource("1_6m2es")
metadata/_edit_horizontal_guides_ = [-48.0, 48.0]

[node name="Parts" type="Node2D" parent="."]
position = Vector2(-64, -64)

[node name="BottomFull" type="Sprite2D" parent="Parts"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dy5sx")
position = Vector2(0, -16)
scale = Vector2(8, 8)
texture = ExtResource("3_smakq")
centered = false
region_rect = Rect2(0, 13, 16, 3)

[node name="SideStart" type="Sprite2D" parent="Parts"]
unique_name_in_owner = true
z_index = 1
material = SubResource("ShaderMaterial_3xib2")
position = Vector2(128, 24)
rotation = 1.5708
scale = Vector2(8, 8)
texture = ExtResource("3_dy5sx")
centered = false

[node name="SideEnd" type="Sprite2D" parent="Parts"]
unique_name_in_owner = true
visible = false
z_index = 1
material = SubResource("ShaderMaterial_3xib2")
position = Vector2(0, 104)
rotation = -1.57079
scale = Vector2(8, 8)
texture = ExtResource("3_dy5sx")
centered = false

[node name="TopFull" type="Sprite2D" parent="Parts"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rgkw3")
position = Vector2(128, 40)
rotation = -3.14159
scale = Vector2(8, 8)
texture = ExtResource("3_smakq")
centered = false
region_enabled = true
region_rect = Rect2(0, 13, 16, 3)
